--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MyGeolocation</string>
-    <string name="title_home">Map</string>
-    <string name="title_dashboard">List Marker</string>
-    <string name="title_notifications">Not Use</string>
+    <string name="title_map">Map</string>
+    <string name="title_list_marker">List Marker</string>
+    <string name="title_not_use">Not Use</string>
 </resources>
